--- a/index.html
+++ b/index.html
@@ -427,14 +427,18 @@ void main() {
 						<h1>Contributors</h1>
 
 						<ul>
-							<li>Hugh S. Kennedy</li>
-							<li>Chris Dickinson</li>
-							<li>Matt DesLauriers</li>
+							<li>Hugh S. Kennedy: @hughsk</li>
+							<li>Chris Dickinson: @isntivacant</li>
+							<li>Matt DesLauriers: @mattdesl</li>
 							<li>...and many others</li>
 						</ul>
 
 						<p>
 							IRC: #stackgl on freenode
+						</p>
+
+						<p>
+							Twitter/GitHub:  @stackgl
 						</p>
 
 						<p>Thanks for your time!</p>
