--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ void main() {
 					</section>
 
 					<section>
-						<p>Geometry tools</p>
+						<h1>Geometry tools</h1>
 						<ul>
 							<li><a href="https://www.npmjs.org/package/conway-hart">conway-hart</a></li>
 							<li><a href="https://www.npmjs.org/package/vectorize-text">vectorize-text</a></li>
